# IvanApi/apis/TestApi.go
@@ -21,8 +21,10 @@ import (
 // @Success 200 {string} TestApi
 // @Router /test [get]
 func TestApi(g *gin.Context) {
-	commons.PublishMessage("发送消息")
-	g.JSON(http.StatusOK, "发送消息")
+	//commons.PublishMessage("发送消息")
+	g.JSON(http.StatusBadRequest, gin.H{
+		"msg": "发送消息",
+	})
 }
 
 // @Summary 测试2
@@ -55,12 +57,11 @@ func TestApi2(g *gin.Context) {
 // @Summary 测试3
 // @Schemes
 // @Description test3
-// @Tags test
 // @Param id query int true "id"
 // @Accept json
 // @Produce json
 // @Success 200 {string} TestApi3
-// @Router /test/third [get]
+// @Router /third [get]
 func TestApi3(g *gin.Context) {
 	type input struct {
 		Id int `form:"id" json:"id"`
@@ -71,13 +72,13 @@ func TestApi3(g *gin.Context) {
 		return
 	}
 
-	var list = [5]int{1, 2, 3, 4, 5}
-	for i := 1; i <= len(list); i++ {
-		item := list[i]
-		if item == 10 {
-			return
-		}
-	}
+	//var list = [5]int{1, 2, 3, 4, 5}
+	//for i := 1; i <= len(list); i++ {
+	//	item := list[i]
+	//	if item == 10 {
+	//		return
+	//	}
+	//}
 	return
 }
 
