# IvanApi/docs/swagger.json
@@ -285,7 +285,7 @@
                 }
             }
         },
-        "/test/third": {
+        "/third": {
             "get": {
                 "description": "test3",
                 "consumes": [
@@ -293,9 +293,6 @@
                 ],
                 "produces": [
                     "application/json"
-                ],
-                "tags": [
-                    "test"
                 ],
                 "summary": "测试3",
                 "parameters": [
